@@ -30,6 +30,9 @@ public class CalculationsHelper {
 
 
   private PrepaidCardEJBBean10 getPrepaidCardEJBBean10() {
+    if(prepaidCardEJBBean10 == null ){
+      prepaidCardEJBBean10 = new PrepaidCardEJBBean10();
+    }
     return prepaidCardEJBBean10;
   }
 
@@ -147,10 +150,13 @@ public class CalculationsHelper {
    * @return
    */
   public Double getUsdValue() throws Exception {
-    if (ConfigUtils.isEnvTest()) {
-      return new Double(645);
+    //TODO: revisar bien esto. Ya que si es null impacta en los tests
+    if(ConfigUtils.isEnvTest()) {
+      return Double.valueOf(645);
     }
-    return getPrepaidCardEJBBean10().getCurrencyUsd().getSellCurrencyConvertion();
+    else {
+      return getPrepaidCardEJBBean10().getCurrencyUsd().getSellCurrencyConvertion();
+    }
   }
 
   /**
